[tool.poetry]
name = "project2-kovalchuk-m25-555"
version = "0.1.0"
description = ""
authors = ["Crook1Boss35 <cockandballtorture0911@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
